<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".vistas.MenuAdministrador">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25sp"
        android:layout_marginLeft="25sp"
        android:layout_marginTop="25sp"
        android:layout_marginEnd="25sp"
        android:layout_marginRight="25sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:gravity="center"
            android:text="@string/menu"
            android:textColor="@color/colorPrimary_c"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="180sp"
            android:layout_height="180sp"
            android:layout_gravity="center"
            android:tint="@color/colorAccentB_c"
            app:srcCompat="@drawable/admin"
            tools:ignore="VectorDrawableCompat" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccentB_c"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnAgregarEmpleado"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:text="@string/agregarempleado"
            android:textColor="@color/colorAccentB_c"
            app:backgroundTint="@color/white"
            app:icon="@drawable/add"
            app:iconTint="@color/colorAccentB_c" />

        <Button
            android:id="@+id/btnConsultarEmpleado"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:text="@string/consularempleados"
            android:textColor="@color/colorAccentB_c"
            app:backgroundTint="@color/white"
            app:icon="@drawable/consultar_emp"
            app:iconTint="@color/colorAccentB_c" />

        <Button
            android:id="@+id/btnPerfilAdmin"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="19sp"
            android:text="@string/perfil"
            android:textColor="@color/colorAccentB_c"
            app:backgroundTint="@color/white"
            app:icon="@drawable/empleado"
            app:iconTint="@color/colorAccentB_c" />

        <Button
            android:id="@+id/btnCerrarSesionAdmin"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:text="@string/cerrarsesion"
            android:textColor="@color/colorAccentB_c"
            app:backgroundTint="@color/white"
            app:icon="@drawable/sesion"
            app:iconTint="@color/colorAccentB_c" />

    </LinearLayout>

</LinearLayout>