<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/A"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccentB_c"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRegresarPerfil"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorAccentB_c"
            app:backgroundTint="@color/colorAccentB_c"
            app:icon="@drawable/abc_vector_test" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12sp"
            android:layout_marginEnd="12sp"
            android:layout_marginRight="12sp"
            android:layout_marginBottom="12sp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/perfil"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25sp"
        android:layout_marginLeft="25sp"
        android:layout_marginEnd="25sp"
        android:layout_marginRight="25sp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:layout_weight="1"
                android:text="@string/datosgenerales"
                android:textColor="@color/colorAccentB_c"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textColor="@color/colorAccentB_c" />

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginLeft="5sp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:textColor="@color/colorAccent_c"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domicilio"
                android:textColor="@color/colorAccentB_c" />

            <EditText
                android:id="@+id/txtDomicilio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginLeft="5sp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:textColor="@color/colorAccent_c"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexo"
                android:textColor="@color/colorAccentB_c" />

            <TextView
                android:id="@+id/txtSexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorAccent_c" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fechanacimiento"
                android:textColor="@color/colorAccentB_c" />

            <TextView
                android:id="@+id/txtFechaNacimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorAccent_c" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_dato"
                android:textColor="@color/colorAccentB_c" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginLeft="5sp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:textColor="@color/colorAccent_c"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefono"
                android:textColor="@color/colorAccentB_c" />

            <EditText
                android:id="@+id/txtTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginLeft="5sp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:textColor="@color/colorAccent_c"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area"
                android:textColor="@color/colorAccentB_c" />

            <TextView
                android:id="@+id/txtArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorAccent_c" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/puesto"
                android:textColor="@color/colorAccentB_c" />

            <TextView
                android:id="@+id/txtPuesto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorAccent_c" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="10sp"
                android:layout_weight="1"
                android:text="@string/cambiarcontrasenia"
                android:textColor="@color/colorAccentB_c"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nuevacontrasenia"
                android:textColor="@color/colorAccentB_c"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/txtNuevaContrasenia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginLeft="5sp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName|textPassword"
                android:textColor="@color/colorAccent_c"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGuardarTodo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:gravity="center"
                android:text="@string/guardartodo" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>