<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/r1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5sp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginLeft="5sp"
                android:layout_marginEnd="5sp"
                android:layout_marginRight="5sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/area"
                    android:textColor="@color/colorAccentB_c" />

                <TextView
                    android:id="@+id/txtItemArea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:layout_marginLeft="5sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="00/00/0000 00:00"
                    android:textColor="@color/colorAccent_c"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5sp"
                android:layout_marginLeft="5sp"
                android:layout_marginEnd="5sp"
                android:layout_marginRight="5sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fechaHoraRegistro"
                    android:textColor="@color/colorAccentB_c" />

                <TextView
                    android:id="@+id/txtItemFechaHRegistro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:layout_marginLeft="5sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Fecha y hora"
                    android:textColor="@color/colorAccent_c" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5sp"
                android:layout_marginLeft="5sp"
                android:layout_marginEnd="5sp"
                android:layout_marginRight="5sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empleado"
                    android:textColor="@color/colorAccentB_c" />

                <TextView
                    android:id="@+id/txtItemEmpleado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:layout_marginLeft="5sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Nombre del empleado"
                    android:textColor="@color/colorAccent_c" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5sp"
                android:layout_marginLeft="5sp"
                android:layout_marginEnd="5sp"
                android:layout_marginRight="5sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descripcion"
                    android:textColor="@color/colorAccentB_c" />

                <TextView
                    android:id="@+id/txtItemDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Aqui va la descripción del reporte..."
                    android:textColor="@color/colorAccent_c" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5sp"
                android:layout_marginLeft="5sp"
                android:layout_marginEnd="5sp"
                android:layout_marginRight="5sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/estado"
                    android:textColor="@color/colorAccentB_c" />

                <TextView
                    android:id="@+id/txtItemStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:layout_marginLeft="5sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/colorAccent_c"
                    android:textStyle="bold"
                    tools:text="No resuelto" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginLeft="5sp"
                android:layout_marginEnd="5sp"
                android:layout_marginRight="5sp"
                android:gravity="right"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnResolverItem"
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"
                    android:layout_marginTop="5sp"
                    android:text="@string/resolver" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>

